--- a/IntegratedPresenter/ViewModels/PilotUI.xaml
+++ b/IntegratedPresenter/ViewModels/PilotUI.xaml
@@ -5,48 +5,62 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Integrated_Presenter.ViewModels"
              mc:Ignorable="d" 
-             d:DesignHeight="1300" d:DesignWidth="800">
+             d:DesignHeight="650" d:DesignWidth="300">
     <Grid>
         <Viewbox>
-            <Grid Background="#272727" Height="1710" Width="800">
+            <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="100"></RowDefinition>
-                    <RowDefinition Height="800"></RowDefinition>
-                    <RowDefinition Height="10"></RowDefinition>
-                    <RowDefinition Height="800"></RowDefinition>
+                    <RowDefinition Height="55"></RowDefinition>
+                    <RowDefinition Height="395"></RowDefinition>
+                    <RowDefinition Height="395"></RowDefinition>
                 </Grid.RowDefinitions>
-                <Grid>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                        <TextBlock Cursor="Hand" MouseDown="tbLASTmode_MouseDown" Name="tbLASTmode" Foreground="#a0a0a0" VerticalAlignment="Center" FontSize="50" Margin="50,0,150,0">LAST</TextBlock>
-
-                        <TextBlock Cursor="Hand" MouseDown="tbEMGmode_MouseDown" Name="tbEMGmode" Foreground="#a0a0a0" VerticalAlignment="Center" FontSize="50" Margin="0,0,10,0">EMG</TextBlock>
-
-                        <TextBlock Name="tbALTmode" Foreground="#3f3f3f" VerticalAlignment="Center" FontSize="50" FontWeight="Bold" FontStyle="Oblique" Margin="50,0,0,0">ALT</TextBlock>
-                        <TextBlock VerticalAlignment="Center" Foreground="#808080" FontSize="50" Margin="10,0,10,0">/</TextBlock>
-                        <TextBlock Cursor="Hand" MouseDown="tbSTDmode_MouseDown" Name="tbSTDmode" FontWeight="Bold" Foreground="White" VerticalAlignment="Center" FontSize="50" Margin="0,0,60,0">STD</TextBlock>
-                        <Ellipse Cursor="Hand" MouseDown="ellipseState_MouseDown" Name="ellipseState" Width="50" Height="50" HorizontalAlignment="Right" Margin="10" Fill="Red"></Ellipse>
-                    </StackPanel>
+                <Grid Width="300" Height="50">
+                    <Border BorderBrush="{StaticResource lightBrush}" BorderThickness="5" CornerRadius="30">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition></ColumnDefinition>
+                                <ColumnDefinition></ColumnDefinition>
+                                <ColumnDefinition></ColumnDefinition>
+                                <ColumnDefinition></ColumnDefinition>
+                            </Grid.ColumnDefinitions>
+                            <Grid Grid.Column="0" HorizontalAlignment="Center">
+                                <TextBlock Cursor="Hand" MouseDown="tbLASTmode_MouseDown" Name="tbLASTmode" Foreground="#a0a0a0" VerticalAlignment="Center" FontSize="25">LAST</TextBlock>
+                            </Grid>
+                            <Grid Grid.Column="1" HorizontalAlignment="Center">
+                                <TextBlock Cursor="Hand" MouseDown="tbEMGmode_MouseDown" Name="tbEMGmode" Foreground="#a0a0a0" VerticalAlignment="Center" FontSize="25" Margin="0,0,10,0">EMG</TextBlock>
+                            </Grid>
+                            <Grid Grid.Column="2" HorizontalAlignment="Center">
+                                <TextBlock Cursor="Hand" MouseDown="tbSTDmode_MouseDown" Name="tbSTDmode" FontWeight="Bold" Foreground="White" VerticalAlignment="Center" FontSize="25">STD</TextBlock>
+                            </Grid>
+                            <Grid Grid.Column="4" HorizontalAlignment="Center">
+                                <Ellipse Cursor="Hand" MouseDown="ellipseState_MouseDown" Name="ellipseState" Width="35" Height="35" Fill="{StaticResource redBrush}"></Ellipse>
+                            </Grid>
+                        </Grid>
+                    </Border>
                 </Grid>
-                <Border Grid.Row="1" Background="#918d8d" CornerRadius="30" Padding="10">
-                    <Viewbox>
-                        <StackPanel Orientation="Horizontal" Width="1240">
-                            <local:PilotCamPreview Height="1250" Width="300" x:Name="pvCurrent_plt" Grid.Row="1" Margin="10,0,10,0"></local:PilotCamPreview>
-                            <local:PilotCamPreview Height="1250" Width="300" x:Name="pvCurrent_ctr" Grid.Row="1" Margin="10,0,0,0"></local:PilotCamPreview>
-                            <local:PilotCamPreview Height="1250" Width="300" x:Name="pvCurrent_lec" Margin="10,0,0,0"></local:PilotCamPreview>
-                            <local:PilotCamPreview Height="1250" Width="300" x:Name="pvCurrent_org" Margin="10,0,0,0"></local:PilotCamPreview>
-                        </StackPanel>
-                    </Viewbox>
+                <Border Grid.Row="1" BorderBrush="{StaticResource greenBrush}" BorderThickness="5" CornerRadius="30" Width="300" Height="390">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <local:PilotCamPreview Grid.Column="0" x:Name="pvCurrent_plt" Margin="5"></local:PilotCamPreview>
+                        <local:PilotCamPreview Grid.Column="1" x:Name="pvCurrent_ctr" Margin="5"></local:PilotCamPreview>
+                        <local:PilotCamPreview Grid.Column="2" x:Name="pvCurrent_lec" Margin="5"></local:PilotCamPreview>
+                    </Grid>
                 </Border>
-                <Border Grid.Row="3" Background="#80004f00" CornerRadius="30" Padding="10" Margin="0,0,0,20">
-                    <Viewbox>
-                        <StackPanel Orientation="Horizontal" Width="1240">
-                            <local:PilotCamPreview Height="1250" Width="300" x:Name="pvNext_plt" Grid.Row="1" Margin="10,0,10,0"></local:PilotCamPreview>
-                            <local:PilotCamPreview Height="1250" Width="300" x:Name="pvNext_ctr" Grid.Row="1" Margin="10,0,0,0"></local:PilotCamPreview>
-                            <local:PilotCamPreview Height="1250" Width="300" x:Name="pvNext_lec" Margin="10,0,0,0"></local:PilotCamPreview>
-                            <local:PilotCamPreview Height="1250" Width="300" x:Name="pvNext_org" Margin="10,0,0,0"></local:PilotCamPreview>
-                        </StackPanel>
-                    </Viewbox>
-
+                <Border Grid.Row="2" BorderBrush="{StaticResource grayBrush}" BorderThickness="5" CornerRadius="30" Width="300" Height="390">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <local:PilotCamPreview Grid.Column="0" x:Name="pvNext_plt" Margin="5"></local:PilotCamPreview>
+                        <local:PilotCamPreview Grid.Column="1" x:Name="pvNext_ctr" Margin="5"></local:PilotCamPreview>
+                        <local:PilotCamPreview Grid.Column="2" x:Name="pvNext_lec" Margin="5"></local:PilotCamPreview>
+                    </Grid>
                 </Border>
             </Grid>
         </Viewbox>
