--- a/IntegratedPresenter/ViewModels/PilotUI.xaml
+++ b/IntegratedPresenter/ViewModels/PilotUI.xaml
@@ -38,7 +38,7 @@
                         </Grid>
                     </Border>
                 </Grid>
-                <Border Grid.Row="1" BorderBrush="{StaticResource greenBrush}" BorderThickness="5" CornerRadius="30" Width="300" Height="390">
+                <Border Grid.Row="1" BorderBrush="{StaticResource whiteBrush}" BorderThickness="5" CornerRadius="30" Width="300" Height="390">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition></ColumnDefinition>
